--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/v_store?useSSL=false
 
 
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=shop
+spring.datasource.password=shop
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
