--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,6 @@ spring.servlet.multipart.max-request-size=2MB
 spring.thymeleaf.prefix=file:src/main/resources/templates/
 spring.thymeleaf.cache: false
 
+# Conf port
+server.port=8081
 
